--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 pandas>=1.3.0
-google-generativeai>=0.3.0
+google-genai>=0.1.0
 python-dotenv>=0.19.0
+urllib3<2.0.0
+importlib-metadata>=4.0.0
+streamlit>=1.30.0
